# egg-party

./: .dockerignore  .editorconfig  .exrc  .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  dockerfile  ecosystem.config.js  ecosystem.json  mocha.opts  nest-cli.json  package-lock.json  package.json  pm2.config.yml  prettier.config.base.js  serverless.yml  tsconfig.base.json  tsconfig.json  tslint.base.json  tslint.json  webpack.watch.config.js
.github/: CODING_STANDARDS.md
.github/docs/: CONTRIBUTING.md  README.md
.github/workflows/: ci-check.yml  ci.yml  cicd.yml  dev-cicd.yml  prod-cicd.yml  workflow.yml
.request_samples/slack/: challenge.json  message_with_eggs.json  message_without_eggs.json
.scripts/: build.js  build.sh  init.sh  invoke.sh  kill-if-running.js  postdeploy.sh  run.sh  serve.js  start.js  watch-dist.js
docs/: CONTRIBUTING.md  README.md
egg-party-api/: function.json
src/: app.module.ts  azure-functions-nest-wrapper.ts  egg-party-application.ts  function.json  main.azure.ts  main.rs  main.ts  msg.rs  tsconfig.json  tsconfig.prod.json  tslint.json
src/api/: api.module.ts
src/business/: business.module.ts
src/db/: db-connection-config.model.ts  db-connection.provider.ts  db.module.ts  index.ts  mod.rs  org.rs  user.rs
src/events/: slack.rs
src/http_ez/: err.rs  json.rs  mod.rs  req.rs  res.rs  res_body.rs
src/purify/: create-either-async.fns.ts  create-maybe-async.fns.ts
src/shared/: shared.module.ts
test/: mocha.junit.opts  mocha.opts  mocha.ts-watch.opts  prettier.config.js  tsconfig.json  tslint.json
(+349 files in other folders)
