[package]
name = "egg_party"
version = "0.1.0"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["macros"] }
lambda_runtime = "0.2.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simple-error = "0.2.1"
fp-core = "^0.1.9"
simple_logger = "1.6.0"
log = "0.4.8"
lambda_http = "^0.1.1"
http = "^0.1.21"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
